--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,19 +1,19 @@
-
-<div class=" m-5 d-flex justify-content-between align-items-center w-75" >
+<%= stylesheet_link_tag('screens') %>
+<div class=" m-5 d-flex justify-content-between align-items-center w-75 m-auto" >
 <h1>List of foods</h1>
 
- <%= link_to 'Add Food',new_food_path, class:"btn d-flex btn-primary"%> 
+ <%= link_to 'Add Food',new_food_path, class:"btn d-flex btn1"%> 
 
 </div>
 
 
-<table  class="table table-striped table-bordered m-5 w-75">
+<table  class="table table-striped table-bordered m-5 tabl m-auto">
 <thead>
 <tr>
-<th scope="col">Food </th>
-<th>Measurement unit </th>
-<th>Unit price </th>
-<th>Actions </th>
+<th scope="col" class="th">Food </th>
+<th class="th">Measurement unit </th>
+<th class="th">Unit price </th>
+<th class="th">Actions </th>
 </tr>
 </thead>
 <tbody>
