--- a/app/views/inventories/index.html.erb
+++ b/app/views/inventories/index.html.erb
@@ -1,15 +1,15 @@
-
+<%= stylesheet_link_tag('screens') %>
 <div class="container-fluid d-flex flex-column align-items-center">
   <% if @inventories.empty? %>
     <h1>You have no inventories yet</h1>
   <% end %>
 
-  <%= link_to 'Add a new inventory', new_inventory_path, class: "btn btn-primary" %>
+  <%= link_to 'Add a new inventory', new_inventory_path, class: "btn btn1" %>
 
   <% unless @inventories.empty? %>
     <h2 class="mt-3">Your inventories list:</h2>
     <% @inventories.each do |inventory| %>
-      <div class="card w-50 mb-3">
+      <div class="card inventories-card mb-3">
         <h5 class="card-header"><%=link_to inventory.name, inventory_path(inventory.id), class: " text-decoration-none" %></h5>
         <div class="card-body">
           <p class="card-text"><%=inventory.description%></p>
