--- a/app/views/recipe_foods/new.html.erb
+++ b/app/views/recipe_foods/new.html.erb
@@ -1,12 +1,13 @@
-<section class="d-flex flex-column align-items-center w-50 mx-auto">
+<%= stylesheet_link_tag('screens') %>
+<section class="d-flex flex-column align-items-center w-80 mx-auto">
   <h1 class="text-center">Add ingredient</h1>
     <%= form_with url: user_recipe_recipe_foods_path(params[:recipe_id]), method: :post, :html => {:class => "w-50 mt-4"} do |form| %>
       <div class="form-group mt-3">
         <%= form.select :food_id, @foods.collect  {|food| [food.name, food.id]},{ include_blank: false}, class: "form-control", placeholder: "Recipe" %>
       </div>
       <div class="form-group mt-3">
-        <%= form.number_field :quantity, class: "form-control", placeholder: "Quantity" %>
+        <%= form.number_field :quantity, class: "form-control", placeholder: "Quantity", required: true %>
       </div>
-      <button type="submit" class="btn btn-primary mt-3">Add</button>
+      <button type="submit" class="btn btn1 mt-3">Add</button>
     <% end %>
 </section>
