--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,24 +1,25 @@
-<section class="d-flex flex-column align-items-center justify-content-center w-50 mx-auto">
+<%= stylesheet_link_tag('screens') %>
+<section class="d-flex flex-column align-items-center justify-content-center w-100 mx-auto">
   <h1 class="text-center mb-5">Add a Recipe</h1>
 
-    <%= form_with model: @recipe, url: user_recipes_path(@user, @recipe), method: :post, :html => {:class => "w-50 mt-4"} do |form| %>
+    <%= form_with model: @recipe, url: user_recipes_path(@user, @recipe), method: :post, :html => {:class => "w-80 food-form mt-4"} do |form| %>
       <div class="form-group mt-3">
-        <%= form.text_field :name, class: "form-control", placeholder: "Recipe" %>
+        <%= form.text_field :name, class: "form-control", placeholder: "Recipe", required: true  %>
       </div>
       <div class="form-group mt-3">
-        <%= form.text_field :preparation_time, class: "form-control", placeholder: "Preparation Time" %>
+        <%= form.text_field :preparation_time, class: "form-control", placeholder: "Preparation Time", required: true  %>
       </div>
       <div class="form-group mt-3">
-        <%= form.text_field :cooking_time, class: "form-control", placeholder: "Cooking Time" %>
+        <%= form.text_field :cooking_time, class: "form-control", placeholder: "Cooking Time", required: true  %>
       </div>
       <div class="form-group mt-3">
-        <%= form.text_area :description, class: "form-control", placeholder: "Description" %>
+        <%= form.text_area :description, class: "form-control", placeholder: "Description", required: true  %>
       </div>
-      <div class="field form-control mt-3">
+      <div class="field form-control mt-3 border-0">
         <%= form.check_box(:public, { class: "form-check-input" }, true, false) %>
         <%= form.label "Public", class: "form-check-label" %>
     </div>
-      <button type="submit" class="btn btn-primary mt-3">Submit</button>
+      <button type="submit" class="btn btn-success mt-3">Submit</button>
     <% end %>
   
 </section>
