adjust some margin on public recipes

--- a/app/assets/stylesheets/screens.css
+++ b/app/assets/stylesheets/screens.css
@@ -48,6 +48,10 @@ thead, .btn1 {
         text-align: center;
     }
 
+    .card {
+        width: 80% !important;
+    }
+
     .button_to {
         display: flex;
         justify-content: center;
