--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="mt-5 d-flex justify-content-around">
     <button type="button" class="btn bg-transparent text-primary text-decoration-underline border-0" data-bs-toggle="modal" data-bs-target="#recipeModal">
-      Generate shopping list
+      shopping list
     </button>
 
     <div class="modal fade" id="recipeModal" tabindex="-1" aria-labelledby="recipeModalLabel" aria-hidden="true">
