adjust some margin on public recipes

--- a/app/assets/stylesheets/screens.css
+++ b/app/assets/stylesheets/screens.css
@@ -6,6 +6,11 @@
     background: rgba(238, 229, 229, 0.966);
 }
 
+.Rname {
+    text-decoration: none;
+    color:  rgb(33, 161, 54) !important;
+}
+
 /* food section */
 .navG {
     background: rgb(33, 161, 54) !important;
