--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,17 @@
-
+<%= stylesheet_link_tag('screens') %>
 <div class="container-fluid w-50 d-flex flex-column align-items-center mt-5">
 <h2>Sign up</h2>
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {:class => "w-50 mt-4"}) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {:class => "w-100 mt-4"}) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
 <div class="field mt-3">
     <%= f.label :name,  class: "form-label" %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name", class:"form-control" %>
+    <%= f.text_field :name, autofocus: true, autocomplete: "name", class:"form-control", required: true %>
   </div>
 
   <div class="field mt-3">
     <%= f.label :email,class:"form-label" %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"form-control"%>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"form-control", required: true%>
   </div>
 
   <div class="field mt-3">
@@ -19,7 +19,7 @@
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" ,class:"form-control"%>
+    <%= f.password_field :password, autocomplete: "new-password" ,class:"form-control" , required: true%>
   </div>
 
   <div class="field mt-3">
@@ -28,7 +28,7 @@
   </div>
 
   <div class="actions mt-3">
-    <%= f.submit "Sign up" ,class:"btn btn-primary"%>
+    <%= f.submit "Sign up" ,class:"btn btn1"%>
   </div>
 <% end %>
 
