--- a/app/views/recipes/public.html.erb
+++ b/app/views/recipes/public.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag('screens') %>
 <h1 class="text-center mb-5">Public Recipes</h1>
 <section class="d-flex flex-column align-items-center">
   <% @public_recipes.each do |recipe| %>
